[package]
name = "rust_bench_btreeset"
version = "0.1.0"
authors = ["Stein Somers <git@steinsomers.be>"]
autotests = false
autobenches = false 
edition = "2018"

[features]
stagger = []

[dev-dependencies]
proptest = "0.9"
rand = "0.7"
rand_xorshift = "0.2"

[[test]]
name = "collectionstests"
path = "src/tests/set.rs"

[[bench]]
name = "collectionsbenches"
path = "src/benches/set.rs"
